// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H5PEditor alterLibrarySemantics does not mutate semantics and alters the correct values (H5P.Blanks) 1`] = `
[
  {
    "default": "default",
    "name": "notmodified",
    "type": "group",
  },
  {
    "description": "These options will let you control how the task behaves.",
    "fields": [
      {
        "default": false,
        "name": "caseSensitive",
        "type": "boolean",
      },
    ],
    "importance": "low",
    "label": "Behavioural settings",
    "name": "behaviour",
    "optional": true,
    "type": "group",
  },
]
`;

exports[`H5PEditor alterLibrarySemantics does not mutate semantics and alters the correct values (H5P.MultiChoice) 1`] = `
[
  {
    "default": "default",
    "name": "notmodified",
    "type": "group",
  },
  {
    "description": "These options will let you control how the task behaves.",
    "fields": [
      {
        "default": false,
        "name": "randomAnswers",
        "type": "text",
      },
    ],
    "importance": "low",
    "label": "Behavioural settings",
    "name": "behaviour",
    "optional": true,
    "type": "group",
  },
]
`;

exports[`H5PEditor alterLibrarySemantics does not mutate semantics and alters the correct values (H5P.QuestionSet) 1`] = `
[
  {
    "default": "default",
    "name": "notmodified",
    "type": "group",
  },
  {
    "field": {
      "name": "question",
      "options": [
        "H5P.MultiChoice 1.16",
      ],
      "type": "library",
    },
    "name": "questions",
    "type": "text",
  },
  {
    "default": false,
    "name": "randomQuestions",
    "type": "boolean",
  },
]
`;
